--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
 
         <activity
-            android:name=".java.HolidayActivity"
+            android:name=".java.view.HolidayActivity"
             android:label="@string/holiday_activity_java"
             android:configChanges="orientation|screenSize|keyboardHidden"
             />
